--- a/src/components/ButtonComponents/SpecialButtons/Specials.css
+++ b/src/components/ButtonComponents/SpecialButtons/Specials.css
@@ -1,17 +1,17 @@
-.number-btn {
+.special-btn {
     width: 50px;
     height: 50px;
     font-size: 20px;
     margin: 10px;
     border: 1px solid #333;
     border-radius: 50%;
-    background-color: #184379;
+    background-color: #225D9E;
     color: #fff;
     box-shadow: 0 10px 6px -6px black;
 }
 
 
-.btn-container {
+.specials-container {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
