--- a/src/App.css
+++ b/src/App.css
@@ -7,16 +7,21 @@
     padding-bottom: 25px;
 }
 .display {
-    margin-top: 25px;
+    margin: 25px;
     height: 100px;
     width: 450px;
     border-radius: 50px;
     color: white;
     background-color: #322c2d;
     box-shadow: 1px 1px #322c2d;
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
+    
     padding-right: 8%;
     font-size: 5.0rem;
   }
+
+  .button-container{
+      display: flex;
+      justify-content: space-evenly;
+  }
+
+  
