--- a/src/components/ButtonComponents/NumberButtons/Number.css
+++ b/src/components/ButtonComponents/NumberButtons/Number.css
@@ -1,6 +1,6 @@
 .number-btn {
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
     font-size: 20px;
     margin: 10px;
     border: 1px solid #333;
@@ -13,6 +13,7 @@
 
 .btn-container {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     flex-wrap: wrap;
+    width: 250px;
 }
