--- a/src/components/ButtonComponents/OperatorButtons/Operator.css
+++ b/src/components/ButtonComponents/OperatorButtons/Operator.css
@@ -1,6 +1,6 @@
 .operator-btn {
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
     font-size: 20px;
     margin: 10px;
     border: 1px solid #333;
@@ -13,4 +13,6 @@
 .operator-container {
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    
 }
