--- a/src/components/ButtonComponents/SpecialButtons/Specials.css
+++ b/src/components/ButtonComponents/SpecialButtons/Specials.css
@@ -1,6 +1,6 @@
 .special-btn {
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
     font-size: 20px;
     margin: 10px;
     border: 1px solid #333;
@@ -13,6 +13,5 @@
 
 .specials-container {
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+    flex-direction: column;
 }
