Improved CSS of the buttons

--- a/src/components/ButtonComponents/NumberButtons/Number.css
+++ b/src/components/ButtonComponents/NumberButtons/Number.css
@@ -12,8 +12,8 @@
 
 
 .btn-container {
-    display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    width: 250px;
+    display: grid;
+    grid-template-columns: 30% 30% 40%;
 }
+    
+
